--- a/hello.html
+++ b/hello.html
@@ -7,6 +7,6 @@
 </head>
 <body>
    <h1 style="color: aqua;">Hello</h1> 
-   <p>Hii</p>
+   <p>This is a simple HTML document.</p>
 </body>
 </html>
